--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -47,13 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Inframestructure\DbFatory.cs" />
-    <Compile Include="Inframestructure\Disposable.cs" />
-    <Compile Include="Inframestructure\IReponsitory.cs" />
-    <Compile Include="Inframestructure\IDbFactory.cs" />
-    <Compile Include="Inframestructure\IUnitOfWork.cs" />
-    <Compile Include="Inframestructure\RepositotyBase.cs" />
-    <Compile Include="Inframestructure\UnitOfWork.cs" />
+    <Compile Include="Infrastructure\DbFatory.cs" />
+    <Compile Include="Infrastructure\Disposable.cs" />
+    <Compile Include="Infrastructure\IReponsitory.cs" />
+    <Compile Include="Infrastructure\IDbFactory.cs" />
+    <Compile Include="Infrastructure\IUnitOfWork.cs" />
+    <Compile Include="Infrastructure\RepositotyBase.cs" />
+    <Compile Include="Infrastructure\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TeduShopDbContext.cs" />
   </ItemGroup>
