--- a/TeduShop.Web/Web.config
+++ b/TeduShop.Web/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <clear/>
-    <add name="TeduShopConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=TeduShop;Integrated Security=False;User Id=sa;Password=215233476;MultipleActiveResultSets=True"/>
+    <add name="TeduShopConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-2KTJBE5\VANPHONG;Initial Catalog=TeduShop;Integrated Security=False;User Id=sa;Password=215233476;MultipleActiveResultSets=True"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
