--- a/TeduShop.Model/TeduShop.Model.csproj
+++ b/TeduShop.Model/TeduShop.Model.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Abstract\ISeotable.cs" />
     <Compile Include="Abstract\ISwitchtable.cs" />
     <Compile Include="Abstract\TableCommon.cs" />
+    <Compile Include="Models\Error.cs" />
     <Compile Include="Models\Footer.cs" />
     <Compile Include="Models\Menu.cs" />
     <Compile Include="Models\MenuGroup.cs" />
