--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -62,8 +62,13 @@
     <Compile Include="Migrations\201711231510115_InitialDB.Designer.cs">
       <DependentUpon>201711231510115_InitialDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711260650075_ErrorsTable.cs" />
+    <Compile Include="Migrations\201711260650075_ErrorsTable.Designer.cs">
+      <DependentUpon>201711260650075_ErrorsTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reponsitories\ErrorRepository.cs" />
     <Compile Include="Reponsitories\FooterRepository.cs" />
     <Compile Include="Reponsitories\MenuGroupRepository.cs" />
     <Compile Include="Reponsitories\MenuRepository.cs" />
@@ -103,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711231510115_InitialDB.resx">
       <DependentUpon>201711231510115_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711260650075_ErrorsTable.resx">
+      <DependentUpon>201711260650075_ErrorsTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
