--- a/TeduShop.UnitTest/TeduShop.UnitTest.csproj
+++ b/TeduShop.UnitTest/TeduShop.UnitTest.csproj
@@ -63,10 +63,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryTest\PostCategoryRepositoryTest.cs" />
     <Compile Include="RepositoryTest\ProductCategoryRepositoryTest.cs" />
     <Compile Include="RepositoryTest\ProductRepositoryTest.cs" />
     <Compile Include="ServiceTest\PostCategoryServiceTest.cs" />
     <Compile Include="ServiceTest\PostServiceTest.cs" />
+    <Compile Include="ServiceTest\ProductCategoryServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
