--- a/TeduShop.Data/App.config
+++ b/TeduShop.Data/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <clear/>
-    <add name="TeduShopConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-2KTJBE5\VANPHONG;Initial Catalog=TeduShop;Integrated Security=False;User Id=sa;Password=215233476;MultipleActiveResultSets=True"/>
+    <add name="TeduShopConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=PHONGNGUYEN\VANPHONG;Initial Catalog=TeduShop;Integrated Security=False;User Id=sa;Password=ng215233476;MultipleActiveResultSets=True"/>
   </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
