--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\201803301551383_continueWebApi.Designer.cs">
       <DependentUpon>201803301551383_continueWebApi.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804010932087_changeapplication-user.cs" />
+    <Compile Include="Migrations\201804010932087_changeapplication-user.Designer.cs">
+      <DependentUpon>201804010932087_changeapplication-user.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reponsitories\ErrorRepository.cs" />
@@ -138,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803301551383_continueWebApi.resx">
       <DependentUpon>201803301551383_continueWebApi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804010932087_changeapplication-user.resx">
+      <DependentUpon>201804010932087_changeapplication-user.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
