--- a/TeduShop.UnitTest/App.config
+++ b/TeduShop.UnitTest/App.config
@@ -5,8 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <clear />
-    <add name="TeduShopConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-2KTJBE5\VANPHONG;Initial Catalog=TeduShop;Integrated Security=False;User Id=sa;Password=215233476;MultipleActiveResultSets=True" />
+    <clear/>
+    <add name="TeduShopConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=PHONGNGUYEN\VANPHONG;Initial Catalog=TeduShop;Integrated Security=False;User Id=sa;Password=ng215233476;MultipleActiveResultSets=True"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
