--- a/TeduShop.Model/TeduShop.Model.csproj
+++ b/TeduShop.Model/TeduShop.Model.csproj
@@ -57,14 +57,17 @@
     <Compile Include="Abstract\ISeotable.cs" />
     <Compile Include="Abstract\ISwitchtable.cs" />
     <Compile Include="Abstract\TableCommon.cs" />
-    <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\AppRole.cs" />
+    <Compile Include="Models\AppUser.cs" />
     <Compile Include="Models\Error.cs" />
     <Compile Include="Models\Footer.cs" />
+    <Compile Include="Models\Function.cs" />
     <Compile Include="Models\Menu.cs" />
     <Compile Include="Models\MenuGroup.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\Page.cs" />
+    <Compile Include="Models\Permission.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Models\PostCategory.cs" />
     <Compile Include="Models\PostTag.cs" />
