--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -104,6 +104,10 @@
     <Compile Include="Migrations\201804041532287_addTagForProduct.Designer.cs">
       <DependentUpon>201804041532287_addTagForProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804061646480_authen.cs" />
+    <Compile Include="Migrations\201804061646480_authen.Designer.cs">
+      <DependentUpon>201804061646480_authen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reponsitories\ErrorRepository.cs" />
@@ -113,6 +117,7 @@
     <Compile Include="Reponsitories\OrderDetailRepository.cs" />
     <Compile Include="Reponsitories\OrderRepository.cs" />
     <Compile Include="Reponsitories\PageRepository.cs" />
+    <Compile Include="Reponsitories\PermissionRepository.cs" />
     <Compile Include="Reponsitories\PostCategoryRepository.cs" />
     <Compile Include="Reponsitories\PostRepository.cs" />
     <Compile Include="Reponsitories\PostTagRepository.cs" />
@@ -173,6 +178,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804041532287_addTagForProduct.resx">
       <DependentUpon>201804041532287_addTagForProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804061646480_authen.resx">
+      <DependentUpon>201804061646480_authen.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
