--- a/TeduShop.Web/TeduShop.Web.csproj
+++ b/TeduShop.Web/TeduShop.Web.csproj
@@ -210,6 +210,7 @@
   <ItemGroup>
     <Compile Include="Api\AccountController.cs" />
     <Compile Include="Api\AppRoleController.cs" />
+    <Compile Include="Api\AppUserController.cs" />
     <Compile Include="Api\FunctionController.cs" />
     <Compile Include="Api\PostCategoryController.cs" />
     <Compile Include="Api\PostController.cs" />
@@ -254,6 +255,7 @@
     <Compile Include="Models\VisitorStatisticViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\AuthorizationServerProvider.cs" />
+    <Compile Include="Providers\PermissionAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
