--- a/TeduShop.Common/TeduShop.Common.csproj
+++ b/TeduShop.Common/TeduShop.Common.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ActionEnum.cs" />
     <Compile Include="CommonConstant.cs" />
+    <Compile Include="NameDuplicatedException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleEnumcs.cs" />
     <Compile Include="StringHelper.cs" />
