--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -128,6 +128,34 @@
     <Compile Include="Migrations\201804101618307_productCategory.Designer.cs">
       <DependentUpon>201804101618307_productCategory.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804111217383_update.cs" />
+    <Compile Include="Migrations\201804111217383_update.Designer.cs">
+      <DependentUpon>201804111217383_update.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804120349245_updatetable.cs" />
+    <Compile Include="Migrations\201804120349245_updatetable.Designer.cs">
+      <DependentUpon>201804120349245_updatetable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804120358132_updatedata.cs" />
+    <Compile Include="Migrations\201804120358132_updatedata.Designer.cs">
+      <DependentUpon>201804120358132_updatedata.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804120417470_update3.cs" />
+    <Compile Include="Migrations\201804120417470_update3.Designer.cs">
+      <DependentUpon>201804120417470_update3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804120431006_thumbimage.cs" />
+    <Compile Include="Migrations\201804120431006_thumbimage.Designer.cs">
+      <DependentUpon>201804120431006_thumbimage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804120710400_nologin.cs" />
+    <Compile Include="Migrations\201804120710400_nologin.Designer.cs">
+      <DependentUpon>201804120710400_nologin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804121003186_addsize.cs" />
+    <Compile Include="Migrations\201804121003186_addsize.Designer.cs">
+      <DependentUpon>201804121003186_addsize.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reponsitories\ErrorRepository.cs" />
@@ -143,8 +171,10 @@
     <Compile Include="Reponsitories\PostRepository.cs" />
     <Compile Include="Reponsitories\PostTagRepository.cs" />
     <Compile Include="Reponsitories\ProductCategoryRepository.cs" />
+    <Compile Include="Reponsitories\ProductQuantityRepository.cs" />
     <Compile Include="Reponsitories\ProductRepository.cs" />
     <Compile Include="Reponsitories\ProductTagRepository.cs" />
+    <Compile Include="Reponsitories\SizeRepository.cs" />
     <Compile Include="Reponsitories\SlideRepository.cs" />
     <Compile Include="Reponsitories\SupportOnlineRepository.cs" />
     <Compile Include="Reponsitories\TagRepository.cs" />
@@ -216,6 +246,27 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804101618307_productCategory.resx">
       <DependentUpon>201804101618307_productCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804111217383_update.resx">
+      <DependentUpon>201804111217383_update.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804120349245_updatetable.resx">
+      <DependentUpon>201804120349245_updatetable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804120358132_updatedata.resx">
+      <DependentUpon>201804120358132_updatedata.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804120417470_update3.resx">
+      <DependentUpon>201804120417470_update3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804120431006_thumbimage.resx">
+      <DependentUpon>201804120431006_thumbimage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804120710400_nologin.resx">
+      <DependentUpon>201804120710400_nologin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804121003186_addsize.resx">
+      <DependentUpon>201804121003186_addsize.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
