--- a/TeduShop.Model/TeduShop.Model.csproj
+++ b/TeduShop.Model/TeduShop.Model.csproj
@@ -73,7 +73,10 @@
     <Compile Include="Models\PostTag.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductCategory.cs" />
+    <Compile Include="Models\ProductImage.cs" />
     <Compile Include="Models\ProductTag.cs" />
+    <Compile Include="Models\ProductQuantity.cs" />
+    <Compile Include="Models\Size.cs" />
     <Compile Include="Models\Slide.cs" />
     <Compile Include="Models\SupportOnline.cs" />
     <Compile Include="Models\Tag.cs" />
