--- a/TeduShop.Service/TeduShop.Service.csproj
+++ b/TeduShop.Service/TeduShop.Service.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ErrorService.cs" />
     <Compile Include="FunctionService.cs" />
+    <Compile Include="OrderService.cs" />
     <Compile Include="PermissionService.cs" />
     <Compile Include="PostCategoryService.cs" />
     <Compile Include="PostService.cs" />
