--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -64,13 +64,15 @@
     <Compile Include="Migrations\201804191428030_reset.Designer.cs">
       <DependentUpon>201804191428030_reset.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804201402258_deletemenu.cs" />
+    <Compile Include="Migrations\201804201402258_deletemenu.Designer.cs">
+      <DependentUpon>201804201402258_deletemenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reponsitories\ErrorRepository.cs" />
     <Compile Include="Reponsitories\FooterRepository.cs" />
     <Compile Include="Reponsitories\FunctionRepository.cs" />
-    <Compile Include="Reponsitories\MenuGroupRepository.cs" />
-    <Compile Include="Reponsitories\MenuRepository.cs" />
     <Compile Include="Reponsitories\OrderDetailRepository.cs" />
     <Compile Include="Reponsitories\OrderRepository.cs" />
     <Compile Include="Reponsitories\PageRepository.cs" />
@@ -108,6 +110,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201804191428030_reset.resx">
       <DependentUpon>201804191428030_reset.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804201402258_deletemenu.resx">
+      <DependentUpon>201804201402258_deletemenu.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
