--- a/TeduShop.Service/TeduShop.Service.csproj
+++ b/TeduShop.Service/TeduShop.Service.csproj
@@ -54,6 +54,8 @@
     <Compile Include="ProductQuantityService.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SlideService.cs" />
+    <Compile Include="SupportOnlineService.cs" />
     <Compile Include="TagService.cs" />
     <Compile Include="UserRoleService.cs" />
   </ItemGroup>
