--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\201804211612090_finishBasicAdmin.Designer.cs">
       <DependentUpon>201804211612090_finishBasicAdmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804221515047_updateprice.cs" />
+    <Compile Include="Migrations\201804221515047_updateprice.Designer.cs">
+      <DependentUpon>201804221515047_updateprice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reponsitories\ErrorRepository.cs" />
@@ -107,6 +111,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201804211612090_finishBasicAdmin.resx">
       <DependentUpon>201804211612090_finishBasicAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804221515047_updateprice.resx">
+      <DependentUpon>201804221515047_updateprice.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
