--- a/TeduShop.Web/TeduShop.Web.csproj
+++ b/TeduShop.Web/TeduShop.Web.csproj
@@ -258,6 +258,8 @@
     <Compile Include="Models\ApplicationUserViewModel.cs" />
     <Compile Include="Models\FooterViewModel.cs" />
     <Compile Include="Models\FunctionViewModel.cs" />
+    <Compile Include="Models\HeaderViewModel.cs" />
+    <Compile Include="Models\IndexViewModel.cs" />
     <Compile Include="Models\OrderDetailViewModel.cs" />
     <Compile Include="Models\OrderUserAnnoucementViewModel.cs" />
     <Compile Include="Models\OrderViewModel.cs" />
@@ -285,6 +287,68 @@
     <Compile Include="SignalR\TeduShopHub.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\client\css\animate.min.css" />
+    <Content Include="Assets\client\css\bootstrap.css" />
+    <Content Include="Assets\client\css\bootstrap.min.css" />
+    <Content Include="Assets\client\css\custom.css" />
+    <Content Include="Assets\client\css\font-awesome.css" />
+    <Content Include="Assets\client\css\fonts\flexslider-icon.svg" />
+    <Content Include="Assets\client\css\fonts\fontawesome-webfont.svg" />
+    <Content Include="Assets\client\css\owl.carousel.css" />
+    <Content Include="Assets\client\css\owl.theme.css" />
+    <Content Include="Assets\client\css\owl.transitions.css" />
+    <Content Include="Assets\client\css\style.blue.css" />
+    <Content Include="Assets\client\css\style.default.css" />
+    <Content Include="Assets\client\css\style.green.css" />
+    <Content Include="Assets\client\css\style.mono.css" />
+    <Content Include="Assets\client\css\style.pink.css" />
+    <Content Include="Assets\client\css\style.violet.css" />
+    <Content Include="Assets\client\img\AjaxLoader.gif" />
+    <Content Include="Assets\client\img\banner.jpg" />
+    <Content Include="Assets\client\img\banner2.jpg" />
+    <Content Include="Assets\client\img\basketsquare.jpg" />
+    <Content Include="Assets\client\img\blog-avatar.jpg" />
+    <Content Include="Assets\client\img\blog-avatar2.jpg" />
+    <Content Include="Assets\client\img\blog.jpg" />
+    <Content Include="Assets\client\img\blog2.jpg" />
+    <Content Include="Assets\client\img\detailbig1.jpg" />
+    <Content Include="Assets\client\img\detailbig2.jpg" />
+    <Content Include="Assets\client\img\detailbig3.jpg" />
+    <Content Include="Assets\client\img\detailsquare.jpg" />
+    <Content Include="Assets\client\img\detailsquare2.jpg" />
+    <Content Include="Assets\client\img\detailsquare3.jpg" />
+    <Content Include="Assets\client\img\getinspired1.jpg" />
+    <Content Include="Assets\client\img\getinspired2.jpg" />
+    <Content Include="Assets\client\img\getinspired3.jpg" />
+    <Content Include="Assets\client\img\grabbing.png" />
+    <Content Include="Assets\client\img\logo-small.png" />
+    <Content Include="Assets\client\img\logo.png" />
+    <Content Include="Assets\client\img\main-slider1.jpg" />
+    <Content Include="Assets\client\img\main-slider2.jpg" />
+    <Content Include="Assets\client\img\main-slider3.jpg" />
+    <Content Include="Assets\client\img\main-slider4.jpg" />
+    <Content Include="Assets\client\img\product1.jpg" />
+    <Content Include="Assets\client\img\product1_2.jpg" />
+    <Content Include="Assets\client\img\product2.jpg" />
+    <Content Include="Assets\client\img\product2_2.jpg" />
+    <Content Include="Assets\client\img\product3.jpg" />
+    <Content Include="Assets\client\img\product3_2.jpg" />
+    <Content Include="Assets\client\img\slider1.jpg" />
+    <Content Include="Assets\client\img\slider2.jpg" />
+    <Content Include="Assets\client\img\slider3.jpg" />
+    <Content Include="Assets\client\img\slider4.jpg" />
+    <Content Include="Assets\client\js\bootstrap-hover-dropdown.js" />
+    <Content Include="Assets\client\js\bootstrap.min.js" />
+    <Content Include="Assets\client\js\front.js" />
+    <Content Include="Assets\client\js\jquery-1.11.0.min.js" />
+    <Content Include="Assets\client\js\jquery.cookie.js" />
+    <Content Include="Assets\client\js\jquery.flexslider.js" />
+    <Content Include="Assets\client\js\jquery.flexslider.min.js" />
+    <Content Include="Assets\client\js\main.js" />
+    <Content Include="Assets\client\js\modernizr.js" />
+    <Content Include="Assets\client\js\owl.carousel.min.js" />
+    <Content Include="Assets\client\js\respond.min.js" />
+    <Content Include="Assets\client\js\waypoints.min.js" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="ApplicationInsights.config">
@@ -304,7 +368,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Assets\admin\" />
-    <Folder Include="Assets\client\" />
     <Folder Include="Scripts\plugins\" />
     <Folder Include="Scripts\spa\" />
   </ItemGroup>
@@ -318,7 +381,19 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\client\css\bootstrap.css.map" />
+    <Content Include="Assets\client\css\fonts\flexslider-icon.eot" />
+    <Content Include="Assets\client\css\fonts\flexslider-icon.ttf" />
+    <Content Include="Assets\client\css\fonts\flexslider-icon.woff" />
+    <Content Include="Assets\client\css\fonts\fontawesome-webfont.eot" />
+    <Content Include="Assets\client\css\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Assets\client\css\fonts\fontawesome-webfont.woff" />
+    <Content Include="Assets\client\css\fonts\FontAwesome.otf" />
     <None Include="packages.config" />
+    <Content Include="Views\Shared\Layouts.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\Footer.cshtml" />
+    <Content Include="Views\Shared\Header.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TeduShop.Common\TeduShop.Common.csproj">
